# MyChromoMap

./: .gitignore  README.md  electron-builder.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
Untitled copy.icon/: icon.json
electron/: main.ts  preload.ts  python.ts
icons/: icon.icns
python/: main.py  plotter.py  requirements.txt
python/synteny/: __init__.py  dual_synteny.py  micro_synteny.py  multiple_synteny.py  synteny_plotter.py
python/tests/: test_synteny.py
renderer/: app.bundle.js  app.js  index.html  style.css  tauri-shim.js
scripts/: build-python.sh  generate-icon.py  strip-python.sh  subset-fonts.py
src/: App.tsx  index.css  translations.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/python/: main.py  plotter.py
src-tauri/src/: lib.rs  main.rs  python.rs
src/components/ui/: button.tsx  input.tsx  select.tsx  slider.tsx  tabs.tsx
src/hooks/: useElectron.ts
