[package]
name = "chromomap"
version = "1.0.0"
description = "染色体物理图谱 ChromoMap"
authors = ["you"]
edition = "2021"

[lib]
name = "chromomap_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
